[gd_scene load_steps=36 format=3 uid="uid://c8v7gb3yglsl1"]

[ext_resource type="Script" path="res://Old/Enemy_final_boss.gd" id="1_xl5jr"]
[ext_resource type="Texture2D" uid="uid://c868ocbxja0ci" path="res://Old/enemies_boss-Sheet.png" id="2_b2flh"]
[ext_resource type="Script" path="res://Old/Damageable_boss_fina;.gd" id="2_j2pmx"]
[ext_resource type="Script" path="res://Character/CharacterStateMachine.gd" id="3_5ey4i"]
[ext_resource type="Script" path="res://Old/Walk_bf.gd" id="5_5vmqd"]
[ext_resource type="Script" path="res://Old/Throw_bf.gd" id="6_18bow"]
[ext_resource type="Script" path="res://Old/Laser_bf.gd" id="7_olpd2"]
[ext_resource type="Script" path="res://Old/Hit_bf.gd" id="8_bps57"]
[ext_resource type="Script" path="res://Old/Dead_bf.gd" id="9_ypj7d"]
[ext_resource type="Script" path="res://Old/Label.gd" id="10_ob8dv"]
[ext_resource type="AudioStream" uid="uid://1oxpbruofeim" path="res://bgm/enemy_hit.mp3" id="11_nqktu"]
[ext_resource type="AudioStream" uid="uid://bu4xn1h8vwgjh" path="res://bgm/rockstonesfx.mp3" id="12_cdr3k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lp53u"]
size = Vector2(126, 234)

[sub_resource type="Animation" id="Animation_a75it"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ms37k"]
resource_name = "dead"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b2flh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_g7ras"]
resource_name = "hit"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b2flh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_u6r4b"]
resource_name = "laser"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b2flh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 37, 38, 39, 40, 41, 42, 43, 44, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.4, 1.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"lasering"
}, {
"args": [],
"method": &"NOTlasering"
}]
}

[sub_resource type="Animation" id="Animation_mh8xh"]
resource_name = "throw"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b2flh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"throwing"
}, {
"args": [],
"method": &"NOTthrowing"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("throwing:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e8ltb"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b2flh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0gnow"]
_data = {
"RESET": SubResource("Animation_a75it"),
"dead": SubResource("Animation_ms37k"),
"hit": SubResource("Animation_g7ras"),
"laser": SubResource("Animation_u6r4b"),
"throw": SubResource("Animation_mh8xh"),
"walk": SubResource("Animation_e8ltb")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o138d"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yw4hm"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7xls2"]
animation = &"laser"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bpssd"]
animation = &"throw"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4qbrg"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ua577"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_46sku"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pxgig"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pspi0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6jp3o"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oqelp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wb2oh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dn6u8"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ul78o"]
states/dead/node = SubResource("AnimationNodeAnimation_o138d")
states/dead/position = Vector2(680, 152)
states/hit/node = SubResource("AnimationNodeAnimation_yw4hm")
states/hit/position = Vector2(568, 78)
states/laser/node = SubResource("AnimationNodeAnimation_7xls2")
states/laser/position = Vector2(412, 173)
states/throw/node = SubResource("AnimationNodeAnimation_bpssd")
states/throw/position = Vector2(299, 193)
states/walk/node = SubResource("AnimationNodeAnimation_4qbrg")
states/walk/position = Vector2(344, 78)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_ua577"), "walk", "hit", SubResource("AnimationNodeStateMachineTransition_46sku"), "hit", "walk", SubResource("AnimationNodeStateMachineTransition_pxgig"), "walk", "throw", SubResource("AnimationNodeStateMachineTransition_pspi0"), "throw", "walk", SubResource("AnimationNodeStateMachineTransition_6jp3o"), "walk", "laser", SubResource("AnimationNodeStateMachineTransition_oqelp"), "laser", "walk", SubResource("AnimationNodeStateMachineTransition_wb2oh"), "walk", "dead", SubResource("AnimationNodeStateMachineTransition_dn6u8")]
graph_offset = Vector2(-41.775, 24)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0hqru"]
radius = 121.5
height = 297.0

[node name="Enemy_final_boss" type="CharacterBody2D" node_paths=PackedStringArray("hit_state", "walk_state", "damageable", "throw_state", "laser_state")]
script = ExtResource("1_xl5jr")
hit_state = NodePath("CharacterStateMachine/Hit")
walk_state = NodePath("CharacterStateMachine/Walk")
damageable = NodePath("Damageable")
throw_state = NodePath("CharacterStateMachine/Throw")
laser_state = NodePath("CharacterStateMachine/Laser")

[node name="EnemyTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_b2flh")
hframes = 16
vframes = 5

[node name="Marker2D" type="Marker2D" parent="Sprite2D"]
position = Vector2(31.5, 18)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-27, 45)
shape = SubResource("RectangleShape2D_lp53u")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_j2pmx")
health = 50.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0gnow")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_0gnow")
}
tree_root = SubResource("AnimationNodeStateMachine_ul78o")
anim_player = NodePath("../AnimationPlayer")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("3_5ey4i")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Walk")

[node name="Walk" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("throw_state", "laser_state", "dead_state")]
script = ExtResource("5_5vmqd")
throw_state = NodePath("../Throw")
laser_state = NodePath("../Laser")
dead_state = NodePath("../Dead")

[node name="Timer_attack" type="Timer" parent="CharacterStateMachine/Walk"]
wait_time = 5.0
one_shot = true

[node name="Throw" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("walk_state")]
script = ExtResource("6_18bow")
walk_state = NodePath("../Walk")

[node name="Laser" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("walk_state")]
script = ExtResource("7_olpd2")
walk_state = NodePath("../Walk")

[node name="Hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "dead_state", "return_state")]
script = ExtResource("8_bps57")
damageable = NodePath("../../Damageable")
dead_state = NodePath("../Dead")
return_state = NodePath("../Walk")

[node name="Timer" type="Timer" parent="CharacterStateMachine/Hit"]

[node name="Dead" type="Node" parent="CharacterStateMachine"]
script = ExtResource("9_ypj7d")

[node name="Timer" type="Timer" parent="CharacterStateMachine/Dead"]

[node name="Enemy_Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Attack"]
position = Vector2(-27, 18)
shape = SubResource("CapsuleShape2D_0hqru")

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_left = -4.5
offset_top = -117.0
offset_right = 53.5
offset_bottom = -94.0
script = ExtResource("10_ob8dv")
state_machine = NodePath("../CharacterStateMachine")

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_nqktu")
volume_db = -50.0
bus = &"SFX"

[node name="throwing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_cdr3k")
volume_db = -50.0
bus = &"SFX"

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Throw" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Laser" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Dead" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="CharacterStateMachine/Walk/Timer_attack" to="CharacterStateMachine/Walk" method="_on_timer_attack_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Hit/Timer" to="CharacterStateMachine/Hit" method="_on_timer_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Dead/Timer" to="CharacterStateMachine/Dead" method="_on_timer_timeout"]
[connection signal="body_entered" from="Enemy_Attack" to="." method="_on_enemy_attack_body_entered"]
[connection signal="body_exited" from="Enemy_Attack" to="." method="_on_enemy_attack_body_exited"]
